# IWSLT2026

./: .gitignore  LICENSE  README.md  WhisperLv3FT.py  model.py  pyproject.toml  run.sh  run_asr_metacentrum.sh  run_e2e_metacentrum.sh  run_inference_mbart.sh  run_mt_metacentrum.sh  setup.py  train.py
data/MT_data/: removed.csv  test.csv
data/MT_data/clean_data/: dev.csv
data/MT_data/noisy_data/: dev.csv  removed.csv  test.csv
data/llm_finetuning_data/: bhojpuri_asr_output.csv
e2e_v1/: augument.py  data.py  data_loading.py  inference.py  model_loading.py  pipeline.py  train.py
helper/: dataset_builder.py  preprocessor.py
inferences/: inference_qefusion.py
model/: mt_v1.py  train_asr_corrector_exp1.py
