[project]
name = "IWSLT2026"
version = "0.1.0"
description = "IWSLT2026 bhojpuri-hindi translation"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",
    "transformers>=5.0.0",
    "datasets>=4.8.3",
    "pandas>=2.3.3",
    "accelerate>=1.12.0",
    "peft>=0.18.1",
    "scipy>=1.16.3",
    "tqdm>=4.67.3",
    "sentencepiece>=0.2.1",
    "torchcodec>=0.10.0",
    "sacrebleu>=2.6.0",
    "librosa>=0.11.0",
    "jiwer>=4.0.0",
    "ipython>=9.12.0",
    "tiktoken>=0.12.0",
    "protobuf>=7.34.1",
    "soundfile>=0.13.1",
    "bitsandbytes>=0.49.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true